<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeiSwift</string>
    <!--common -->
    <string name="common_loading">正在加载...</string>
    <string name="common_network_not_connected">网络连接断开，请确保网络连接正常</string>
    <string name="common_network_time_out">网络连接超时，请确保网络连接正常</string>
    <string name="common_footer_loading">正在加载中…</string>
    <string name="common_footer_fail">加载失败，点击重新加载</string>
    <string name="common_footer_empty">没有更多内容了</string>
    <string name="common_less_storage_size">存储空间不足，请清理存储卡</string>
    <string name="common_not_enough_storage_size">没有存储空间或存储卡异常，请检查</string>
    <!--drawer -->
    <string name="drawer_nickname_hint">昵称</string>
    <string name="drawer_desciption_hint">简介</string>
    <string name="drawer_desciption_format">简介: %1$s</string>
    <string name="drawer_default_count">"0"</string>
    <string name="drawer_weibo_title">微博</string>
    <string name="drawer_focus_title">关注</string>
    <string name="drawer_follower_title">粉丝</string>
    <string name="drawer_my_weibo">我的微博</string>
    <string name="drawer_my_notification">我的通知</string>
    <string name="drawer_my_favor">我的收藏</string>
    <string name="drawer_hot_weibo">热门微博</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_navigation_open">抽屉栏打开</string>
    <string name="drawer_navigation_close">抽屉栏关闭</string>
    <!-- ToolBar -->
    <string name="toolbar_write_weibo">写微博</string>
    <!-- Main -->
    <string name="main_back_press">确定要退出？</string>
    <string name="main_back_press_ok">确定</string>

    <!--登录-->
    <string name="login_hint">登录一下，精彩内容马上就来</string>
    <string name="login_sso_auth_text">客户端授权</string>
    <string name="login_web_auth_text">网页端授权</string>
    <string name="login_web_auth_success">客户端授权成功</string>
    <string name="login_web_auth_cancel">客户端授权取消</string>
    <!-- 首页-->
    <string name="groups_loading">正在加载分组信息...</string>
    <string name="groups_default">全部</string>
    <string name="timeline_count">%1$s条新微博</string>
    <string name="timeline_source_from_suffix">来自 %1$s</string>
    <string name="timeline_comment">评论</string>
    <string name="timeline_retweet">转发</string>
    <string name="timeline_like">赞</string>
    <string name="timeline_retweet_delete_origin">"抱歉，此微博已被作者删除。查看帮助：#网页链接#"</string>

    <!-- 微博时间 -->
    <string name="just_now">刚刚</string>
    <string name="min">分钟前</string>
    <string name="hour">小时前</string>
    <string name="day">天前</string>
    <string name="month">月前</string>
    <string name="year">年前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="share_title">来自WeiSwift微博客户端</string>

    <string name="home_image_detail_image_pop_window_save_pic">保存图片</string>
    <string name="home_image_detail_image_pop_window_forward_weibo">转发微博</string>
    <string name="home_image_detail_image_pop_window_share">分享</string>
    <string name="home_image_detail_image_pop_window_quit">取消</string>

    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>


</resources>