<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/home_image_detail_image_pop_window_save_pic"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"></FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/home_image_detail_image_pop_window_forward_weibo"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/grey">

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/home_image_detail_image_pop_window_quit"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/black"/>

</LinearLayout>