<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/loadding_footer_bg">

    <LinearLayout
        android:id="@+id/common_loadmore_loading_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="4dp"
            android:indeterminateDrawable="@drawable/sample_footer_loading_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/common_footer_loading"
            android:textColor="@color/loadding_footer_text"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/common_loadmore_fail_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/loadding_footer_text"
            android:textSize="14sp"
            android:text="@string/common_footer_fail" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/common_loadmore_empty_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/common_footer_empty"
            android:textSize="14sp"
            android:textColor="@color/loadding_footer_text"/>
    </FrameLayout>
</FrameLayout>