<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_drawer_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/drawer_avatar_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/drawer_avatar"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/avator_default" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="90dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/drawer_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:hint="@string/drawer_nickname_hint"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/home_original_weiboitem_font" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/drawer_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drawer_avatar_rl"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/drawer_desciption_hint"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/drawer_button_height"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/drawer_weibo_count_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/drawer_weibo_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_default_count"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_weibo_title"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_focus_count_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/drawer_focus_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_default_count"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_focus_title"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/drawer_followers_count_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/drawer_follower_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_default_count"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_follower_title"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawer_timeline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_button_height"
        android:background="@drawable/common_button_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_my_weibo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:text="@string/drawer_my_weibo"
            android:textColor="@color/drawer_highlight_content_text"
            android:textSize="@dimen/home_original_weiboitem_font" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/favorities_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_button_height"
        android:background="@drawable/common_button_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_my_favorite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/drawer_my_favor"
            android:textColor="@color/drawer_normal_content_text"
            android:textSize="@dimen/home_original_weiboitem_font" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/publicweibo_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_button_height"
        android:background="@drawable/common_button_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_hot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:text="@string/drawer_hot_weibo"
            android:textColor="@color/drawer_normal_content_text"
            android:textSize="@dimen/home_original_weiboitem_font" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawer_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_button_height"
        android:background="@drawable/common_button_bg"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:text="@string/drawer_setting"
            android:textColor="@color/drawer_normal_content_text"
            android:textSize="@dimen/home_original_weiboitem_font" />
    </RelativeLayout>
</LinearLayout>